Set up for new the simple-app-projekt
- folder structure
- document completion
- several img files import

--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Simple JS App</title>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,600,700,800,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
   <body>
+    <header class="page-header">
+    <img class="page-header__item" id="logo__header" src="img/Logo_Judith_Rohrer.png" alt="Logo
+    of Judith Rohrer. A geometric black fox with Judith Rohrer written in capital letters next to it">
+  </header>
     <script src="js/scripts.js"></script>
   </body>
 </html>
