added ItemList in button style

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <header class="page-header">
     <img class="page-header__item" id="logo__header" src="img/Logo_Judith_Rohrer.png" alt="Logo
     of Judith Rohrer. A geometric black fox with Judith Rohrer written in capital letters next to it">
-  </header>
+    </header>
+
+    <ul class="pokemon-list"></ul>
+
     <script src="js/scripts.js"></script>
   </body>
 </html>
