--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </header>
 
     <ul class="pokemon-list"></ul>
+    <div id="modal-container"></div>
 
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch-polyfill.js"></script>
