Minified css & js files

--- a/index.html
+++ b/index.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Simple JS App</title>
-    <link rel="shortcut icon" href="img/favicon-96x96.ico">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,600,700,800,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="shortcut icon" href="img/favicon-96x96.ico" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,600,700,800,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="dist/styles.min.css" />
   </head>
   <body>
     <header class="page-header">
-    <img class="page-header__item" id="logo__header" src="img/Logo_Judith_Rohrer.png" alt="Logo
-    of Judith Rohrer. A geometric black fox with Judith Rohrer written in capital letters next to it">
+      <img
+        class="page-header__item"
+        id="logo__header"
+        src="img/Logo_Judith_Rohrer.png"
+        alt="Logo
+    of Judith Rohrer. A geometric black fox with Judith Rohrer written in capital letters next to it"
+      />
     </header>
 
     <ul class="pokemon-list"></ul>
@@ -20,6 +32,6 @@
 
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch-polyfill.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="dist/scripts.min.js"></script>
   </body>
 </html>
